continue building logic

--- a/ProjectGame/Module/Base.lproj/Main.storyboard
+++ b/ProjectGame/Module/Base.lproj/Main.storyboard
@@ -33,8 +33,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="185" height="268"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBack" translatesAutoresizingMaskIntoConstraints="NO" id="EBZ-nQ-bJX">
+                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cardBack" translatesAutoresizingMaskIntoConstraints="NO" id="EBZ-nQ-bJX">
                                                     <rect key="frame" x="0.0" y="0.0" width="185" height="268"/>
+                                                    <gestureRecognizers/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
